@@ -186,14 +186,42 @@ the results agree completely.
 
 The following papers describe some of the algorithms that Regina implements.
 <ul>
-    <li>Ryan Budney,
-	<a href="http://arxiv.org/abs/0810.2346/"><i>Embeddings of
-	3-manifolds in S<sup>4</sup> from the point of view of the
-	11-tetrahedron census</i></a>,
-    Preprint, <tt>arXiv:0810.2346</tt>, October 2008</li>
+  <li><b>Normal surface enumeration:</b>
+    <ul>
+    <li>B.B., <a href="http://arxiv.org/abs/0904.3041/"><i>Quadrilateral-octagon
+    coordinates for almost normal surfaces</i></a>,
+    Preprint, <tt>arXiv:0904.3041</tt>, April 2009</li>
+    <li>B.B., <a href="http://arxiv.org/abs/0901.2629/"><i>Converting between
+    quadrilateral and standard solution sets in normal surface theory</i></a>,
+    Preprint, <tt>arXiv:0901.2629</tt>, January 2009</li>
     <li>B.B., <a href="http://arxiv.org/abs/0808.4050/"><i>Optimising the
     double description method for normal surface enumeration</i></a>,
-    Preprint, <tt>arXiv:0808.4050</tt>, August 2008</li>
+    To appear in Math. Comp., <tt>arXiv:0808.4050</tt>, August 2008</li>
+    <li>Jeffrey L. Tollefson,
+    <a href="http://pjm.math.berkeley.edu/pjm/1998/183-2/p07.xhtml"><i>Normal
+    surface Q-theory</i></a>,
+    Pacific J. Math. <b>183</b> (1998), no.&nbsp;2, 359&ndash;374</li>
+    </ul>
+  </li>
+  <li><b>Decompositions of manifolds:</b>
+    <ul>
+    <li>William Jaco and J. Hyam Rubinstein,
+    <a href="http://www.intlpress.com/JDG/2003/v65.htm"><i>0-efficient
+    triangulations of 3-manifolds</i></a>,
+    J. Differential Geom. <b>65</b> (2003), no.&nbsp;1, 61&ndash;168</li>
+    </ul>
+  </li>
+  <li><b>Cellular information and embeddings in S<sup>4</sup>:</b>
+    <ul>
+    <li>Ryan Budney,
+    <a href="http://arxiv.org/abs/0810.2346/"><i>Embeddings of
+    3-manifolds in S<sup>4</sup> from the point of view of the
+    11-tetrahedron census</i></a>,
+    Preprint, <tt>arXiv:0810.2346</tt>, October 2008</li>
+    </ul>
+  </li>
+  <li><b>Census enumeration:</b>
+    <ul>
     <li>B.B., <a href="http://www.springerlink.com/content/jv63232574835517/"><i>Enumeration
     of non-orientable 3-manifolds using face-pairing graphs and
     union-find</i></a>,
@@ -202,7 +230,14 @@ The following papers describe some of the algorithms that Regina implements.
     <li>B.B., <a href="http://www.worldscinet.com/jktr/mkt/archive.shtml?2004&13"><i>Face pairing graphs and 3-manifold enumeration</i></a>,
     J. Knot Theory Ramifications <b>13</b> (2004),
     no.&nbsp;8, 1057&ndash;1101</li>
+    </ul>
+  </li>
 </ul>
+<p>
+This list is by no means complete.  For more relevant papers, see the
+<a href="docs/bibliography.html">bibliography in the handbook</a>, or Regina's
+<a href="http://www.expmath.org/expmath/volumes/13/13.3/Burton.pdf">summary
+article in Experimental Mathematics</a>.
 <p>
 The author's PhD thesis contains
 detailed descriptions of some of the topological structures, concepts
